[package]
name = "my_rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
num-traits = "0.2.15"
num-bigint = { version = "0.4.3", features = ["rand"] }
rand = "0.8.5"
base64 = "0.21.2"
sha2 = "0.10.6"